# StarBreaker-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
app/: package-lock.json  package.json
app/src/: App.tsx  globals.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  datacore_commands.rs  error.rs  main.rs  ui_sink.rs
app/src/components/: dds-preview.tsx  extract-progress.tsx  geometry-preview.tsx  image-pan-zoom.tsx  image-preview.tsx  sidebar.tsx  startup-dialog.tsx  update-banner.tsx  xml-preview.tsx
app/src/components/audio/: audio-player.tsx  entity-list.tsx  sound-list.tsx  trigger-list.tsx
app/src/lib/: commands.ts  tauri-storage.ts  theme.ts
app/src/stores/: app-store.ts  datacore-store.ts  export-store.ts
app/src/views/: audio-view.tsx  datacore-browser.tsx  export-view.tsx  p4k-browser.tsx
blender_addon/: AGENTS.md  README.md
blender_addon/starbreaker_addon/: __init__.py  contract_naming.py  contract_seed.py  manifest.py  material_contract.py  palette.py  shader_inventory.py  templates.py  ui.py
blender_addon/starbreaker_addon/resources/: material_template_contract.json  material_templates.blend  pom_library.blend
blender_addon/starbreaker_addon/runtime/: __init__.py  constants.py  node_utils.py  package_ops.py  palette_utils.py  record_utils.py  validators.py
blender_addon/starbreaker_addon/runtime/importer/: __init__.py  builders.py  decals.py  groups.py  layers.py  materials.py  orchestration.py  palette.py  types.py  utils.py
blender_addon/tests/: test_animation_pose.py  test_contract_naming.py  test_contract_seed.py  test_decal_offset.py  test_layers.py  test_lights.py  test_manifest.py  test_material_contract.py  test_package_ops.py  test_palette.py  test_pom_detail.py  test_scene_instances.py  test_shader_inventory.py  test_templates.py
cli/: Cargo.toml
cli/src/: common.rs  dcb.rs  entity.rs  error.rs  main.rs  nmc.rs  p4k.rs  skin.rs  socpak.rs
crates/starbreaker-3d/: Cargo.toml
crates/starbreaker-3d/examples/: convert.rs  dump_bones.rs  dump_chr_bone_unknowns.rs  dump_chr_bones_with_crc.rs  dump_chrparams.rs  dump_chunk_strings.rs  dump_dba.rs  dump_dba_meta.rs  dump_dba_packed_pos.rs  dump_dba_time_stream.rs  dump_loadout.rs  dump_mtl.rs  dump_mtl_raw.rs  dump_nmc.rs  dump_obj.rs  dump_ports.rs  dump_vehicle_components.rs  dump_wing_keytimes.rs  entity_to_glb.rs  export_all.rs  extract_gladius.rs  find_colorful_mtl.rs  find_dcb.rs  inspect.rs  list_chunks.rs  list_entities.rs  list_port_names.rs  p4k_skin_to_glb.rs  profile_idris.rs  query_palette.rs  search_p4k.rs  socpak_to_glb.rs
crates/starbreaker-3d/src/: animation.rs  chrparams.rs  decomposed.rs  dequant.rs  error.rs  included_objects.rs  lib.rs  mtl.rs  nmc.rs  pipeline.rs  skeleton.rs  socpak.rs  types.rs
crates/starbreaker-3d/src/gltf/: glb_builder.rs  mod.rs
crates/starbreaker-3d/src/ivo/: material.rs  mod.rs  skin.rs
crates/starbreaker-3d/tests/: dba_animation_test.rs  gltf_test.rs  pipeline_integration_test.rs
crates/starbreaker-chunks/src/: chunk_file.rs
crates/starbreaker-common/src/: discover.rs
crates/starbreaker-datacore/src/: database.rs  dcb_builder.rs  error.rs  loadout.rs  sink.rs  types.rs  walker.rs
crates/starbreaker-datacore/src/export/: json.rs  unp4k_xml.rs  xml.rs
crates/starbreaker-datacore/tests/: database_test.rs  export_json_test.rs  query_compile_test.rs  query_execute_test.rs  types_test.rs  walker_test.rs
crates/starbreaker-dds/src/: dds_file.rs  types.rs
crates/starbreaker-gltf/examples/: entity_to_glb.rs  export_all.rs  profile_idris.rs  socpak_to_glb.rs
crates/starbreaker-gltf/src/: glb_builder.rs  gltf.rs  lib.rs  mtl.rs  pipeline.rs
crates/starbreaker-gltf/tests/: pipeline_integration_test.rs
crates/starbreaker-wwise/src/: datacore_audio.rs
docs/: blender-material-contract-naming-rules.md  blender-material-slot-evidence.md  blender-material-template-authoring.md  blender-shader-family-inventory.json  decomposed-export-contract.md  star-citizen-animation-formats-whitepaper.md
mcp/: Cargo.toml
mcp/src/: main.rs  tools.rs
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/public/: CNAME
website/src/content/docs/: index.mdx
website/src/content/docs/getting-started/: install.md  quickstart.md
website/src/content/docs/reference/: cli.md
website/src/content/docs/wiki/: exporting-ships.md  index.md  material-system.md  p4k-format.md
website/src/styles/: custom.css
