[workspace]
resolver = "2"
members = ["crates/*", "cli", "app/src-tauri", "mcp"]

[workspace.package]
version = "0.2.1"

# Dev builds: basic optimizations for tolerable debug performance
[profile.dev]
opt-level = 1

# External dependencies get full optimization even in dev builds.
# Only recompiles when deps change, so the cost is paid once and cached.
[profile.dev.package."*"]
opt-level = 3

# Release builds: full optimization + fat LTO (CI-only, not for local dev)
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true


[workspace.lints.rust]
warnings = { level = "warn" }

[workspace.lints.clippy]
all = { level = "warn" }
correctness = { level = "warn" }
suspicious = { level = "warn" }
style = { level = "warn" }
complexity = { level = "warn" }
perf = { level = "warn" }

[workspace.dependencies]
parking_lot = "0.12"
