[package]
name = "starbreaker"
version.workspace = true
edition = "2024"

[[bin]]
name = "starbreaker"
path = "src/main.rs"

[dependencies]
starbreaker-wwise = { path = "../crates/starbreaker-wwise" }
starbreaker-wem = { path = "../crates/starbreaker-wem" }
starbreaker-chunks = { path = "../crates/starbreaker-chunks" }
starbreaker-chf = { path = "../crates/starbreaker-chf" }
starbreaker-p4k = { path = "../crates/starbreaker-p4k" }
starbreaker-datacore = { path = "../crates/starbreaker-datacore" }
starbreaker-3d = { path = "../crates/starbreaker-3d" }
starbreaker-cryxml = { path = "../crates/starbreaker-cryxml" }
starbreaker-dds = { path = "../crates/starbreaker-dds" }

clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
indicatif = "0.17"
regex = "1"
glob-match = "0.2"
rayon = "1.11"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1.0.149"
parking_lot = { workspace = true }

# Dev-dependencies used only by examples (not shipped in the release binary).
[dev-dependencies]
crc32c = "0.6"
starbreaker-common = { path = "../crates/starbreaker-common" }
anyhow = "1"
