[package]
name = "starbreaker-mcp"
version.workspace = true
edition = "2021"

[[bin]]
name = "starbreaker-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
anyhow = "1"

image = "0.25"

starbreaker-p4k = { path = "../crates/starbreaker-p4k" }
starbreaker-datacore = { path = "../crates/starbreaker-datacore" }
starbreaker-cryxml = { path = "../crates/starbreaker-cryxml" }
starbreaker-common = { path = "../crates/starbreaker-common" }
starbreaker-chunks = { path = "../crates/starbreaker-chunks" }
starbreaker-dds = { path = "../crates/starbreaker-dds" }
starbreaker-3d = { path = "../crates/starbreaker-3d" }
