[package]
name = "starbreaker-app"
version.workspace = true
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starbreaker-p4k = { path = "../../crates/starbreaker-p4k" }
starbreaker-common = { path = "../../crates/starbreaker-common" }
starbreaker-datacore = { path = "../../crates/starbreaker-datacore" }
starbreaker-3d = { path = "../../crates/starbreaker-3d" }
starbreaker-wwise = { path = "../../crates/starbreaker-wwise" }
starbreaker-wem = { path = "../../crates/starbreaker-wem" }
starbreaker-cryxml = { path = "../../crates/starbreaker-cryxml" }
starbreaker-dds = { path = "../../crates/starbreaker-dds" }
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["rt"] }
rayon = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
parking_lot = { workspace = true }
thiserror = "2"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
system-theme = "0.3"
futures-lite = "2"
