[package]
name = "starbreaker-3d"
version.workspace = true
edition = "2024"

[dependencies]
starbreaker-common = { path = "../starbreaker-common" }
starbreaker-chunks = { path = "../starbreaker-chunks" }
starbreaker-datacore = { path = "../starbreaker-datacore" }
starbreaker-p4k = { path = "../starbreaker-p4k" }
starbreaker-cryxml = { path = "../starbreaker-cryxml" }
starbreaker-dds = { path = "../starbreaker-dds" }
gltf-json = { version = "1", features = ["names", "extras", "KHR_lights_punctual", "KHR_materials_transmission", "KHR_materials_ior", "KHR_materials_emissive_strength", "KHR_materials_volume", "KHR_texture_transform"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
half = "2"
zerocopy = { version = "0.8", features = ["derive"] }
thiserror = "2"
rayon = "1.11.0"
log = "0.4"
glam = "0.29"
crc32fast = "1.4"

[dev-dependencies]
env_logger = "0.11"
